--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         height: 50px; 
        }
        .light{
-        background: #eee;
+        background: #db0707;
        }
        .dark{
-        background: #000;
+        background: #3705ec;
        }
     </style>
 </head>
